--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
         <a href="/">Portfolio</a>
         <a href="/">Contacts</a>
       </nav>
-      <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <address>
+        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      </address>
 
       <!-- title -->
 
@@ -99,7 +101,7 @@
       <a href="/">WEBSTUDIO</a>
       <p>
         Increase the flow of customers and<br />sales for your business with
-        digital<br />marketing & growth solutions.
+        digital<br />marketing &amp; growth solutions.
       </p>
     </footer>
   </body>
