--- a/index.html
+++ b/index.html
@@ -9,25 +9,31 @@
     <header>
       <!-- top -->
 
-      <a href="/">WEBSTUDIO</a>
       <nav>
-        <a href="/">Studio</a>
-        <a href="/">Portfolio</a>
-        <a href="/">Contacts</a>
+        <a href="">WEBSTUDIO</a>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
       </nav>
       <address>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <ul>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        </ul>
       </address>
-
-      <!-- title -->
-
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
     </header>
 
     <main>
-      <!-- Services -->
+      <!-- title -->
+
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+
+      <!-- services -->
       <section>
         <ul>
           <li>
