update file index

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <!-- top -->
 
       <nav>
-        <a href="">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -35,6 +35,7 @@
 
       <!-- services -->
       <section>
+        <h2>Services</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -77,25 +78,25 @@
 
         <ul>
           <li>
-            <img src="imeges/1.jpg" alt="Mark Guerrero" width="264" />
+            <img src="./imeges/1.jpg" alt="Mark Guerrero" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
 
           <li>
-            <img src="imeges/2.jpg" alt="Tom Ford" width="264" />
+            <img src="./imeges/2.jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
 
           <li>
-            <img src="imeges/3.jpg" alt="Camila Garcia" width="264" />
+            <img src="./imeges/3.jpg" alt="Camila Garcia" width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
 
           <li>
-            <img src="imeges/4.jpg" alt="Daniel Wilson" width="264" />
+            <img src="./imeges/4.jpg" alt="Daniel Wilson" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -104,10 +105,10 @@
     </main>
 
     <footer>
-      <a href="/">WEBSTUDIO</a>
+      <a href="/index.html">WebStudio</a>
       <p>
-        Increase the flow of customers and<br />sales for your business with
-        digital<br />marketing &amp; growth solutions.
+        Increase the flow of customers and sales for your business with digital
+        marketing &amp; growth solutions.
       </p>
     </footer>
   </body>
