--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       </nav>
       <address>
         <ul>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="mailto:info@devstudio.com"> info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -40,32 +40,32 @@
           <li>
             <h3>Strategy</h3>
             <p>
-              Our goal is to identify the business <br />problem to walk away
-              with the<br />perfect and creative solution.
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
             </p>
           </li>
 
           <li>
             <h3>Punctuality</h3>
             <p>
-              Bring the key message to the <br />brand's audience for the best
-              price<br />within the shortest possible time.
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
             </p>
           </li>
 
           <li>
             <h3>Diligence</h3>
             <p>
-              Research and confirm brands that<br />present the strongest
-              digital growth<br />opportunities and minimize risk.
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
             </p>
           </li>
 
           <li>
             <h3>Technologies</h3>
             <p>
-              Design practice focused on digital<br />experiences. We bring
-              forth a deep<br />passion for problem-solving.
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
             </p>
           </li>
         </ul>
@@ -105,7 +105,7 @@
     </main>
 
     <footer>
-      <a href="/index.html">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing &amp; growth solutions.
