--- a/index.html
+++ b/index.html
@@ -78,25 +78,37 @@
 
         <ul>
           <li>
-            <img src="./imeges/1.jpg" alt="Mark Guerrero" width="264" />
+            <img
+              src="./imeges/mark-guerrero.jpg"
+              alt="Mark Guerrero"
+              width="264"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
 
           <li>
-            <img src="./imeges/2.jpg" alt="Tom Ford" width="264" />
+            <img src="./imeges/tom-ford.jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
 
           <li>
-            <img src="./imeges/3.jpg" alt="Camila Garcia" width="264" />
+            <img
+              src="./imeges/camila-garcia.jpg"
+              alt="Camila Garcia"
+              width="264"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
 
           <li>
-            <img src="./imeges/4.jpg" alt="Daniel Wilson" width="264" />
+            <img
+              src="./imeges/daniel-wilson.jpg"
+              alt="Daniel Wilson"
+              width="264"
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
