update folder images

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <ul>
           <li>
             <img
-              src="./imeges/mark-guerrero.jpg"
+              src="./images/mark-guerrero.jpg"
               alt="Mark Guerrero"
               width="264"
             />
@@ -88,14 +88,14 @@
           </li>
 
           <li>
-            <img src="./imeges/tom-ford.jpg" alt="Tom Ford" width="264" />
+            <img src="./images/tom-ford.jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
 
           <li>
             <img
-              src="./imeges/camila-garcia.jpg"
+              src="./images/camila-garcia.jpg"
               alt="Camila Garcia"
               width="264"
             />
@@ -105,7 +105,7 @@
 
           <li>
             <img
-              src="./imeges/daniel-wilson.jpg"
+              src="./images/daniel-wilson.jpg"
               alt="Daniel Wilson"
               width="264"
             />
