update html file

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
   </head>
   <body>
     <header>
-      <!-- top -->
-
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
@@ -26,14 +24,15 @@
     </header>
 
     <main>
-      <!-- title -->
+      <!-- container 1 -->
 
       <section>
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
 
-      <!-- services -->
+      <!-- container 2 -->
+
       <section>
         <h2>Services</h2>
         <ul>
@@ -71,7 +70,7 @@
         </ul>
       </section>
 
-      <!-- Team -->
+      <!-- container 3 -->
 
       <section>
         <h2>Our Team</h2>
